--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "semi": false,
-  "singleQuote": true,
   "trailingComma": "all",
-  "printWidth": 80,
-  "endOfLine": "lf"
+  "singleQuote": true,
+  "endOfLine": "lf",
+  "printWidth": 80
 }
