--- a/package.json
+++ b/package.json
@@ -1,36 +1,13 @@
 {
   "name": "kinderpark",
-  "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "format": "prettier --write",
-    "type-check": "tsc --pretty --noEmit",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "test": "jest",
-    "test-all": "yarn lint && yarn type-check && yarn test"
-  },
-  "dependencies": {
-    "next": "10.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "rosetta": "^1.1.0"
+    "clean": "rimraf node_modules"
   },
   "devDependencies": {
-    "@types/react": "^17.0.4",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
-    "autoprefixer": "^10.2.5",
-    "eslint": "^7.26.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "postcss": "^8.2.13",
-    "prettier": "^2.3.0",
-    "tailwindcss": "^2.1.2",
-    "typescript": "^4.2.4"
+    "rimraf": "^3.0.2"
   }
 }
